# Multimedia-Manager

./: Cargo.toml  README.adoc  README.md  sauvegarde.json  sauvegardemp4.json
src/: cli.rs  interact.rs  lib.rs  main.rs  musicfile.rs  scan.rs  scrap.rs  search.rs  tag.rs  test.rs  write2md.rs  writeplaylist.rs
src/markdown/: md1.md  md7.md  md9.md  test.md  testi.md
src/playlist/: play7.m3u  play8.m3u  test.m3u
src/test/markdown/: test.md
