[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"
id3 = "1.4.0"
markdown-gen = "1.2.1"
chrono = "0.4.23"
m3u = "1.0.0"
mp3-duration = "0.1.10"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0"
mp4ameta = "0.11.0"
futures = "0.3"
reqwest= {version="0.10.10", features=["json"]}
tokio={version="0.2",features =["full"]}
